Issue #2: Added extra white space on success screen. Also changed color of TOTAL label to dark gray

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: "Roboto";
     background: #f4f7fb;
 }
-th {
+th, small {
     color: #8393aa;
 }
 
